removed redenudant code

--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                     >
                       HNG Internship
                     </p>
-                    <ul class="d-none d-md-block" style="color: #232433;">
+                    <ul style="color: #232433;">
                       <li>
                         Converted designs to code using Boostrap 4, HTML, CSS
                         and JavaScript
@@ -886,73 +886,6 @@
                         implementation of designs across different viewports
                       </li>
                     </ul>
-                  </div>
-                </div>
-                <div class="col-1 my-auto d-block d-md-none">
-                  <i
-                    class="fa fa-chevron-right"
-                    aria-hidden="true"
-                    type="button"
-                    data-toggle="modal0"
-                    data-target="#hng"
-                  ></i>
-
-                  <!--ZEROTH MODAL-->
-                  <div
-                    class="modal fade"
-                    id="hng"
-                    tabindex="-1"
-                    role="dialog"
-                    aria-labelledby="hngTitle"
-                    aria-hidden="true"
-                  >
-                    <div
-                      class="modal-dialog modal-dialog-centered"
-                      role="document"
-                    >
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="hngLongTitle">
-                            Front End Developer Intern
-                          </h5>
-                          <button
-                            type="button"
-                            class="close"
-                            data-dismiss="modal"
-                            aria-label="Close"
-                          >
-                            <span aria-hidden="true">&times;</span>
-                          </button>
-                        </div>
-                        <div class="modal-body">
-                          <div class="d-flex mb-4">
-                            <p class="company text-center">
-                              <img
-                                src="./img/brand-logo.png"
-                                alt=""
-                                class="img-fluid w-100"
-                              />
-                              HNG Internship
-                            </p>
-                            <ul class="px-4">
-                              <li>
-                                Converted designs to code using Boostrap 4,
-                                HTML, CSS and JavaScript
-                              </li>
-                              <li>
-                                Worked as a sub team lead for an Envato-related
-                                task
-                              </li>
-                              <li>
-                                Learnt how to build responsive and pixel-perfect
-                                implementation of designs across different
-                                viewports
-                              </li>
-                            </ul>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
                   </div>
                 </div>
               </div>
@@ -977,7 +910,7 @@
                     >
                       DevCareer
                     </p>
-                    <ul class="d-none d-md-block" style="color: #232433;">
+                    <ul style="color: #232433;">
                       <li>
                         Learnt how to use SASS and I used it in building this
                         portfolio
@@ -997,76 +930,6 @@
                     </ul>
                   </div>
                 </div>
-                <div class="col-1 my-auto d-block d-md-none">
-                  <i
-                    class="fa fa-chevron-right"
-                    aria-hidden="true"
-                    type="button"
-                    data-toggle="modal"
-                    data-target="#devcareer"
-                  ></i>
-
-                  <!--FIRST MODAL-->
-                  <div
-                    class="modal fade"
-                    id="devcareer"
-                    tabindex="-1"
-                    role="dialog"
-                    aria-labelledby="devcareerTitle"
-                    aria-hidden="true"
-                  >
-                    <div
-                      class="modal-dialog modal-dialog-centered"
-                      role="document"
-                    >
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="devcareerLongTitle">
-                            Web Development Intern
-                          </h5>
-                          <button
-                            type="button"
-                            class="close"
-                            data-dismiss="modal"
-                            aria-label="Close"
-                          >
-                            <span aria-hidden="true">&times;</span>
-                          </button>
-                        </div>
-                        <div class="modal-body">
-                          <div class="d-flex mb-4">
-                            <div class="col-12 px-5">
-                              <img
-                                src="./img/devlogo2.png"
-                                alt=""
-                                class="d-block w-100"
-                              />
-                            </div>
-                          </div>
-
-                          <ul class="px-4">
-                            <li>
-                              Learnt how to use SASS and I used it in building
-                              this portfolio
-                            </li>
-                            <li>
-                              Did a mini-project using Ruby-on-Rails, based on
-                              the courses taken on the Learning path
-                            </li>
-                            <li>
-                              Did a JavaScript course to understand the
-                              fundamentals before diving solely into React
-                            </li>
-                            <li>
-                              Worked on some mini-projects using HTML, CSS and
-                              JavaScript
-                            </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
               <!--SOFTWARE TESTING-->
               <div class="col-12 d-flex mb-3">
@@ -1081,10 +944,10 @@
                 <div class="col-7 my-auto">
                   <div class="resume-content">
                     <h5 style="overflow-y: hidden;">Software Tester</h5>
-                    <p class="company font-italic" style="overflow-y: hidden;">
+                    <p class="company font-italic" style="overflow-y: hidden; color: #232433;">
                       Fieldinsight, Akoka, Lagos
                     </p>
-                    <ul class="d-none d-md-block">
+                    <ul style="color: #232433;">
                       <li>
                         Reviewed requirements and specifications to understand
                         software design standards
@@ -1104,75 +967,6 @@
                     </ul>
                   </div>
                 </div>
-                <div class="col-1 my-auto d-block d-md-none">
-                  <i
-                    class="fa fa-chevron-right"
-                    aria-hidden="true"
-                    type="button"
-                    data-toggle="modal"
-                    data-target="#software"
-                  ></i>
-
-                  <!--SECOND MODAL-->
-                  <div
-                    class="modal fade"
-                    id="software"
-                    tabindex="-1"
-                    role="dialog"
-                    aria-labelledby="softwareTitle"
-                    aria-hidden="true"
-                  >
-                    <div
-                      class="modal-dialog modal-dialog-centered"
-                      role="document"
-                    >
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="softwareLongTitle">
-                            Software Tester
-                          </h5>
-                          <button
-                            type="button"
-                            class="close"
-                            data-dismiss="modal"
-                            aria-label="Close"
-                          >
-                            <span aria-hidden="true">&times;</span>
-                          </button>
-                        </div>
-                        <div class="modal-body">
-                          <p class="company text-center">
-                            <img
-                              src="./img/company.png"
-                              alt=""
-                              class="img-fluid w-100"
-                            />
-                            Fieldinsight, Akoka, Lagos
-                          </p>
-                          <ul class="px-4">
-                            <li>
-                              Reviewed requirements and specifications to
-                              understand software design standards
-                            </li>
-
-                            <li>
-                              Evaluated software for functionality, form and
-                              usability
-                            </li>
-                            <li>
-                              Defined, created and controlled testing
-                              environments for successful software deliverables.
-                            </li>
-                            <li>
-                              Carried out tests to identify report and repair
-                              issues such as bugs and glitches.
-                            </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
 
               <!--SOFTWARE DEVELOPMENT INTERN-->
@@ -1190,10 +984,10 @@
                     <h5 style="overflow-y: hidden;">
                       Software Development Intern
                     </h5>
-                    <p class="company font-italic" style="overflow-y: hidden;">
+                    <p class="company font-italic" style="overflow-y: hidden; color: #232433;">
                       Fieldinsight, Akoka, Lagos
                     </p>
-                    <ul class="d-none d-md-block">
+                    <ul style="color: #232433;">
                       <li>
                         Wrote clean, clear and well tested code for various
                         projects, such as Facilities and Location in
@@ -1214,80 +1008,6 @@
                         development and Sails JS for backend web development
                       </li>
                     </ul>
-                  </div>
-                </div>
-                <div class="col-1 my-auto d-block d-md-none">
-                  <i
-                    class="fa fa-chevron-right"
-                    aria-hidden="true"
-                    type="button"
-                    data-toggle="modal"
-                    data-target="#development"
-                  ></i>
-
-                  <!--THIRD MODAL-->
-                  <div
-                    class="modal fade"
-                    id="development"
-                    tabindex="-1"
-                    role="dialog"
-                    aria-labelledby="developmentTitle"
-                    aria-hidden="true"
-                  >
-                    <div
-                      class="modal-dialog modal-dialog-centered"
-                      role="document"
-                    >
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="developmentLongTitle">
-                            Software Development Intern
-                          </h5>
-                          <button
-                            type="button"
-                            class="close"
-                            data-dismiss="modal"
-                            aria-label="Close"
-                          >
-                            <span aria-hidden="true">&times;</span>
-                          </button>
-                        </div>
-                        <div class="modal-body">
-                          <p class="company text-center">
-                            <img
-                              src="./img/company.png"
-                              alt=""
-                              class="img-fluid w-100"
-                            />
-                            Fieldinsight, Akoka, Lagos
-                          </p>
-                          <ul class="px-4">
-                            <li>
-                              Wrote clean, clear and well tested code for
-                              various projects, such as Facilities and Location
-                              in FIeldinsight V2 , Hobby Application
-                            </li>
-                            <li>
-                              Created interactive websites with software
-                              development department using HTML and JavaScript
-                              frameworks and libraries
-                            </li>
-                            <li>
-                              Collaborated with other developers to identify and
-                              alleviate number of bugs and errors in software
-                            </li>
-                            <li>
-                              Contributed ideas during department meetings
-                            </li>
-                            <li>
-                              Worked with React JS and Redux for front end web
-                              development and Sails JS for backend web
-                              development
-                            </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
                   </div>
                 </div>
               </div>
