adjusted large display for medium screens

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
 
   <body>
-    <header class="mb-5 d-block d-md-none">
+    <header class="mb-5 d-block d-lg-none">
       <nav
         class="navbar navbar-expand-lg header position-fixed sticky-top py-0 px-md-5 w-100"
         style="z-index: 99;"
@@ -72,7 +72,7 @@
       </nav>
     </header>
 
-    <main class="d-block d-md-none">
+    <main class="d-block d-lg-none">
       <!--MAIN BODY-->
       <!--HOME PAGE-->
       <div class="jumbotron jumbotron-fluid mb-0">
@@ -173,7 +173,7 @@
           <div class="col-12 d-flex mb-3">
             <div class="col-3 mr-2">
               <p class="resume-date font-weight-bold text-secondary" style="overflow-y: hidden;">
-                06/2020-08/2020
+                06/2020-<br/>08/2020
               </p>
             </div>
             <div class="col-7 my-auto">
@@ -535,8 +535,8 @@
 
       <!--WORK MANAGEMENT-->
       <div class="container py-5 px-5 mw-100 work-content">
-        <div class="row text-center">
-          <div class="col-12 mb-3">
+        <div class="row text-center px-md-5">
+          <div class="col-12 col-md-4 mb-3">
             <i class="fa fa-laptop" aria-hidden="true"></i>
             <div class="content">
               <h5 style="overflow-y: hidden;">Web Development</h5>
@@ -547,7 +547,7 @@
               </p>
             </div>
           </div>
-          <div class="col-12 mb-3">
+          <div class="col-12 col-md-4 mb-3">
             <i class="fa fa-wrench" aria-hidden="true"></i>
             <div class="content">
               <h5 style="overflow-y: hidden;">Software Testing</h5>
@@ -558,7 +558,7 @@
               </p>
             </div>
           </div>
-          <div class="col-12">
+          <div class="col-12 col-md-4">
             <i class="fa fa-tasks" aria-hidden="true"></i>
             <div class="content">
               <h5 style="overflow-y: hidden;">Project Management</h5>
@@ -596,7 +596,7 @@
         </div>
 
         <div class="row px-4 py-4">
-          <div class="col-12 mb-4 px-5">
+          <div class="col-12 col-md-4 mb-4 px-5 px-md-3">
             <div class="card">
               <img
                 class="card-img-top w-100"
@@ -621,7 +621,7 @@
             </div>
           </div>
 
-          <div class="col-12 mb-4 px-5">
+          <div class="col-12 col-md-4 mb-4 px-5 px-md-3">
             <div class="card">
               <img
                 class="card-img-top w-100"
@@ -630,7 +630,7 @@
               />
               <div class="card-body">
                 <h5 class="card-title" style="color: #232433; overflow-y: hidden;">
-                  HNGi8 Request Certificate page
+                  HNGi8 Request page
                 </h5>
                 <p class="card-text" style="color: #232433; line-height: normal;">
                   Worked on this project based on a design during HNG internship
@@ -646,7 +646,7 @@
             </div>
           </div>
 
-          <div class="col-12 mb-4 px-5">
+          <div class="col-12 col-md-4 mb-4 px-5 px-md-3">
             <div class="card">
               <img
                 class="card-img-top w-100"
@@ -671,7 +671,7 @@
             </div>
           </div>
 
-          <div class="col-12 mb-4 px-5">
+          <div class="col-12 col-md-4 mb-4 px-5 px-md-3">
             <div class="card">
               <img
                 class="card-img-top w-100"
@@ -728,7 +728,7 @@
       </div>
     </main>
 
-    <footer class="text-center pt-4 pb-2 d-block d-md-none">
+    <footer class="text-center pt-4 pb-2 d-block d-lg-none">
       <p class="font-italic" style=" overflow-y: hidden;">
         Created with love
         <i class="fa fa-heart" aria-hidden="true"></i> &copy;Oluwaseyi Awotunde
@@ -736,10 +736,10 @@
     </footer>
 
     <!--LARGER DISPLAYS-->
-    <main class="d-none d-md-block">
+    <main class="d-none d-lg-block">
 
       <!--DISPLAY FOR MEDIUM TO LARGE SCREENS-->
-      <div class="row d-none d-md-flex">
+      <div class="row d-none d-lg-flex">
         <div class="col-md-3">
           <div class="sidebar position-fixed sticky-top">
             <div class="col-md-12 text-center">
